# opencode-multiplexer-rs

./: Cargo.toml  README.md  dist-workspace.toml
.github/workflows/: ci.yml  release.yml  security.yml
src/: config.rs  lib.rs  main.rs  notify.rs  registry.rs
src/app/: conversation.rs  diff.rs  focus.rs  message_picker.rs  mod.rs  reducer.rs  session_picker.rs  sessions.rs  state.rs
src/data/: mod.rs  poller.rs
src/data/db/: models.rs  reader.rs
src/data/discovery/: cwd.rs  mod.rs  ps.rs
src/ops/: fzf.rs  git.rs  mod.rs  opencode.rs  worktree.rs
src/terminal/: color.rs  input.rs  manager.rs  mod.rs  pty.rs  renderer.rs  surface.rs
src/ui/: conversation.rs  diff.rs  hints.rs  layout.rs  message_picker.rs  mod.rs  root.rs  session_picker.rs  sidebar.rs
tests/: db_reader.rs  discovery.rs  foundation.rs  git_ops.rs  managed.rs  notify.rs  polish.rs
