[package]
name = "ocmux-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
alacritty_terminal = "0.26"
anyhow = "1"
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }
crossterm = "0.28"
portable-pty = "0.9"
ratatui = "0.30.0-beta.0"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "sync", "time"] }

[dev-dependencies]
pretty_assertions = "1"
