[package]
name = "ocmux-rs"
version = "0.1.0"
edition = "2024"
description = "A terminal multiplexer for managing OpenCode sessions"
license = "Apache-2.0"
repository = "https://github.com/joeyism/ocmux-rs"
homepage = "https://github.com/joeyism/ocmux-rs"
readme = "README.md"
keywords = ["terminal", "multiplexer", "tui", "opencode"]
categories = ["command-line-utilities"]

[[bin]]
name = "ocmux"
path = "src/main.rs"

[dependencies]
alacritty_terminal = "0.26"
anyhow = "1"
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }
crossterm = "0.28"
portable-pty = "0.9"
ratatui = "0.30.0-beta.0"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
libc = "0.2"
pulldown-cmark = "0.12"
syntect = { version = "5", default-features = false, features = ["default-fancy"] }
thiserror = "2"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "sync", "time"] }

[dev-dependencies]
pretty_assertions = "1"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
